# scalavsc-

./: .gitignore  .gitmodules  README.md
test_c++/: CMakeLists.txt  Makefile
test_c++/benchmark/: CMakeLists.txt
test_c++/benchmark/factorial/: CMakeLists.txt  factorial_bm.cpp
test_c++/benchmark/fib/: CMakeLists.txt  fib_bm.cpp
test_c++/benchmark/sc/: CMakeLists.txt
test_c++/benchmark/sc/freelock/: CMakeLists.txt
test_c++/benchmark/sc/freelock/sum/: CMakeLists.txt  Sum-tst.cpp
test_c++/benchmark/sc/freelock/summator/: CMakeLists.txt  Summator-tst.cpp
test_c++/include/: Formula.hpp
test_c++/include/factorial/: factorial.h  factorial.hpp
test_c++/include/fib/: fib.h  fib.hpp
test_c++/include/fibbonacci/: fibbonacci.hpp
test_c++/include/sc/freelock/: sum.h  sum.hpp  summator.h  summator.hpp
test_c++/include/sc/lock/: sum.h  sum.hpp  summator.h  summator.hpp
test_c++/src/: Formula.h  hello.C  hello2.C  main.cpp
test_c++/src/exe/: CMakeLists.txt  main.cpp
test_c++/src/factorial/: factorial.cpp  factorial.h
test_c++/src/lib/: CMakeLists.txt
test_c++/src/lib/factorial/: CMakeLists.txt  factorial.cpp
test_c++/src/lib/fib/: fib.cpp
test_c++/src/lib/formula/: CMakeLists.txt  Formula.cpp
test_c++/tst/: CMakeLists.txt
test_c++/tst/factorial/: CMakeLists.txt  Factorial-tst.cpp
test_c++/tst/fib/: CMakeLists.txt  Fib-tst.cpp
test_c++/tst/formula/: CMakeLists.txt  Formula-tst.cpp
test_c++/tst/sc/freelock/sum/: CMakeLists.txt  Sum-tst.cpp
test_c++/tst/sc/freelock/summator/: CMakeLists.txt  Summator-tst.cpp
test_go/: .gitignore  factorial.go  factorial_test.go  fib_test.go  fold.go  fold_test.go  main.go  rfold.go  rfold_test.go  sum.go  sum_test.go  summator.go  summator_test.go  utils.go
test_go/bigfib/: bigfib.go  bigfib_test.go
test_go/biglib/: bigfloat.go  bigint.go  bigint_test.go  functions.go  genericbig.go  interfaces.go  model.go  types.go
test_go/factorial/: factorial.go  factorial_test.go
test_go/fib/: fib.go  fib_test.go
test_go/fold/: fold.go  fold_test.go
test_go/rfold/: rfold.go  rfold_test.go
test_go/sc/freelock/sum/: sum.go  sum_test.go
test_go/sc/freelock/summator/: summator.go  summator_test.go
test_go/sc/lock/sum/: sum.go
test_go/sc/lock/summator/: summator.go
test_go/sum/: sum.go  sum_test.go
test_go/sum_tc/: sum.go  sum_test.go
test_go/summator/: summator.go  summator_test.go
test_go/summator_tc/: summator.go  summator_test.go
test_go/tc/freelock/sum/: sum.go
test_go/tc/freelock/summator/: summator.go
test_go/tc/lock/sum/: sum.go  sum_test.go
test_go/tc/lock/summator/: summator.go  summator_test.go
test_go/test/: ge_test.go
test_go/utils/: gen_test.go  interfaces.go  split_test.go  utils.go
test_jmh/: .gitignore  build.sbt
test_jmh/project/: plugins.sbt
test_jmh/src/main/scala/jmh/main/: TestHexString.scala  TestParVector.scala
test_rust/src/: main.rs
test_rust/src/fib/: mod.rs
test_rust/src/lib/: foo.rs
test_scala/: build.sbt
test_scala/src/main/scala/: Hello.scala  Main.scala  ParMain.scala  ParTest.scala  Timed.scala
